still working on lstm intuition

--- a/5_sequence_models/my_notes1.1.ipynb
+++ b/5_sequence_models/my_notes1.1.ipynb
@@ -227,13 +227,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"LSTM.png\" alt=\"Drawing\" style=\"width: 700px;\"/>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -260,9 +253,11 @@
     "\n",
     "5. Given this, the domain of $c^{<t-1>}$  seems unconstrained: whatever it was $c^{<t-1>}$, it will be added to the candidate with domain $(-1, 1)$. Therefore, **if the response of $\\Gamma_f, \\Gamma_u, \\tilde c$ to the input $[a^{<t-1>}, x^{t}]$ is consistently high, the range of $c$ can increase by a whole $(-1,1)$ in the step $(t+1)$**. This means that for step $t$ the domain boundary of $c$ is $(c_{min}^{<0>}-t, c_{max}^{<0>}+t)$.\n",
     "\n",
-    "6. Now the domain of $a$ can be defined: it is a dampened $tanh(c)$. As already discussed, the amount of dampening will solely depend on the response of $\\Gamma_o$ to the prior $a^{<t-1>}$. And the greater the range boundaries of $c$, the closer to $(-1, 1)$ the range of $a$ will be. The range of $a$ will be maximal if the response of $\\Gamma_o$ to the prior $a^{<t-1>}$ is maximal, and the current range for $c$ is maximal, i.e. $(c_{min}^{<0>}-t, c_{max}^{<0>}+t)$.\n",
+    "6. Now the domain of $a$ can be defined: it is a dampened and normalized $c$. As already discussed, the amount of dampening will solely depend on the response of $\\Gamma_o$ to $[a^{<t-1>}, x^{<t>}]$. And the greater the range boundaries of $c$, the closer to $(-1, 1)$ the range of $a$ will be (being somewhat saturated beneath $(-2, 2)$ as seen).\n",
     "\n",
-    "7. The output $y^{<t>}= S(W_y a^{<t>} + b_y$ has a softmax activation layer, which acts like an exponential normalization into a probability distribution. This means that the sum of all outputs equals to 1. Therefore, since it is a discrete distribution, the domain boundary for $y$ is $[0, 1]$.\n",
+    "7. The output $y^{<t>}= S(W_y a^{<t>} + b_y)$ has a softmax activation layer, which acts like an exponential normalization into a probability distribution. This means that the sum of all outputs equals to 1. Therefore, since it is a discrete distribution, the domain boundary for $y$ is $[0, 1]$.\n",
+    "\n",
+    "<img src=\"LSTM.png\" alt=\"Drawing\" style=\"width: 700px;\"/>\n",
     "\n"
    ]
   },
@@ -270,13 +265,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Possible interpretations:\n",
+    "## 2. Interpretation:\n",
     "\n",
-    "1. As in a fully connected layer, the linear combination $W[a^{<t-1>}, x^{<t>}] + b$ maps a vector of inputs to a vector of features. The mapping for each element of the input vector is independent of all the others, and the response for each output feature is the linear combination of all the separate responses. This kind of mapping is happening (and being trained) in the computation of all 3 gates, $\\tilde c$ and $y$. Since $\\tilde c, c, a$ have the same dimensionality, and the LSTM performs element-wise operations among the 3 of them, we could argue that **all of them share related semantics: their $i^{th}$ index refers to the same feature**. Also important to observe, **a higher response value means higher survival chances**: in the gates this is explicitly so. In $\\tilde c, c, a, y$ this is not so evident: let's imagine all the corresponding weights (and target label) are multiplied by $-1$. The responses for $\\tilde c, c, a$ would behave identically, just the sign would be flipped, and with a minus-one-hot label, this would have no impact in the LSTM'ssemantics. But the difference comes with the softmax layer, in which lower values are mapped to smaller activations. And remember that the target for $y$ is a one-hot\n",
+    "* As in a fully connected layer, the linear combination $W[a^{<t-1>}, x^{<t>}] + b$ maps a vector of inputs to a vector of features. The mapping for each element of the input vector is independent of all the others, and the response for each output feature is the linear combination of all the separate responses. This kind of mapping is happening (and being trained) in the computation of all 3 gates, $\\tilde c$ and $y$. Since $\\tilde c, c, a$ have the same dimensionality, and the LSTM performs element-wise operations among the 3 of them, we could argue that **all of them share related semantics: their $i^{th}$ index refers to the same feature**. Also important to observe, **a higher response value means both higher presence and higher survival chances**: the presence is coded by the one-hot format being positive only for present inputs, and zero elsewhere. Regarding survival chances, the gates explicitly map higher activations to higher throughput. In $\\tilde c, c, a, y$ this is not so evident: let's imagine all the corresponding weights (and target label) are multiplied by $-1$. The responses for $\\tilde c, c, a$ would behave identically, just the sign would be flipped, and with a minus-one-hot label, this would have no impact in the LSTM's semantics. But the difference comes with the softmax layer, in which lower values are mapped to smaller activations, and flipping the sign would lead to a somewhat \"complementary\" probability distribution.\n",
     "\n",
-    "2. Therefore,\n",
     "\n",
-    "2. Note that \n",
+    "* Regarding the $c \\rightarrow a\\rightarrow y$ upper end, we recall that $a^{<t>}$ is a normalized, dampened version of $c^{<t>}$. For the normalizing, it seems that a sigmoid instead of a softmax would also work well, but be \"slower\" with respect to $t$, the main difference being purely numerical: the tanh behaves more like $f(x)=x$ in the $(-0.5, 0.5)$ range and then starts saturating around $(-2, 2)$, whereas the sigmoid is close to $f(x) = 0.5 + \\frac{1}{6}x$ in the $(-2, 2)$ range, and starts saturating around $(-5, 5)$. The sigmoid provides a gradient 6 times smoother in a range 4 times bigger, and its curve doesn't saturate until more than twice the range. Hence, tanh leads much quicker to saturation than sigmoid. This means that **the values of c beneath $(-2, 2)$ will lead to saturated feature responses**. Regarding the output gate: we know that dividing the softmax's input tends to uniformize the distribution. Therefore, **a lower $\\Gamma_o^{<t>}$ will dampen the feature responses for $a^{<t+1>}$, but also expresses uncertainty about how well the degree of confidence coded in $c^{<t>}$ fits $y^{<t>}$**. This probably means that the optimization will try to optimally map the \n",
+    "\n",
+    "* So we see that $a$ is \n",
+    "\n",
+    "\n",
+    ", so, after 2 optimal $t$-steps approx., the unit is able to express confidence. Therefore this can act as a short-term memory mechanism\n",
+    "\n",
+    "* The saturation ability of $tanh(c^{<t>})$ in very few steps provides, the unit provides an update system to\n",
     "\n",
     "1. The one-hot format for $x^{<t>}$ means that only one column of the parameters dependent on $[a^{<t-1>}, x^{t}]$ will be active for the current input at time $t$. This allows the parameters to develop a per-word specialization with total independence among input classes, and between $x$ and $a$. F.e., a word like *supercalifragilistico* can trigger an activation orders of magnitude bigger than the activations for $a$, and therefore have a throughput that is independend of the latent state. The activation for a more generic and context-dependent word like *the* will probably be within the range of the latent activations, so\n",
     "\n",
