added sampled jazz impro

--- a/5_sequence_models/my_notes_1_4.ipynb
+++ b/5_sequence_models/my_notes_1_4.ipynb
@@ -306,7 +306,15 @@
     "\n",
     "* LSTMs don't feature attractor-based memory systems\n",
     "\n",
-    "* GRUs are more recent (Cho et al. 2014) and outperformed LSTM on nearly all tasks except NLP (but LSTMs almost matched GRU with $b_f^{<0>} \\geq 1$."
+    "* GRUs are more recent (Cho et al. 2014) and outperformed LSTM on nearly all tasks except NLP (but LSTMs almost matched GRU with $b_f^{<0>} \\geq 1$.\n",
+    "\n",
+    "todo:\n",
+    "\n",
+    "https://www.bioinf.jku.at/publications/older/2604.pdf\n",
+    "\n",
+    "https://www.bioinf.jku.at/publications/older/2604.pdf\n",
+    "\n",
+    "https://arxiv.org/pdf/1412.3555.pdf"
    ]
   },
   {
